@@ -57,6 +57,21 @@
 				<control type="image">
 					<width>30</width>
 					<height>30</height>
+					<texture>windows/home/shutdown.png</texture>
+					<animation effect="fade" start="100" end="30" time="250" condition="!Control.HasFocus(3) | !Container(3).HasFocus(12)">Conditional</animation>
+					<visible>!Skin.HasSetting(disable.homepowermenu)</visible>
+				</control>
+				<control type="image">
+					<width>30</width>
+					<height>30</height>
+					<texture>windows/home/shutdown.png</texture>
+					<animation effect="fade" start="100" end="30" time="250" condition="!Control.HasFocus(3) | !Container(3).HasFocus(12)">Conditional</animation>
+					<visible>Skin.HasSetting(disable.homepowermenu)</visible>
+					<colordiffuse>red</colordiffuse>
+				</control>
+				<control type="image">
+					<width>30</width>
+					<height>30</height>
 					<texture>windows/home/favourites.png</texture>
 					<animation effect="fade" start="100" end="30" time="250" condition="!Control.HasFocus(3) | !Container(3).HasFocus(10)">Conditional</animation>
 					<visible>!Skin.HasSetting(disable.favourites)</visible>
@@ -218,6 +233,10 @@
 						<label>Settings</label>
 						<onclick>SetProperty(edit_widget,settings.widget.type,3062)</onclick>
 						<onclick>ActivateWindow(3062)</onclick>
+					</item>
+					<item id="12">
+						<label>Power</label>
+						<onclick>Skin.ToggleSetting(disable.homepowermenu)</onclick>
 					</item>
 					<item id="10">
 						<label>Favourites</label>
